<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusableInTouchMode="true"></LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:id="@+id/signup_finish_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/actionbar_back"
                        android:layout_marginLeft="10dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Signup"
                        android:paddingRight="10dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>
                </LinearLayout>


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:focusableInTouchMode="true"></LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/sign_up_name_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/MyEditText"
                        android:layout_marginLeft="10dp">

                        <EditText
                            android:id="@+id/sign_up_name_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/sign_up_name_hint" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/sign_up_email_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:theme="@style/MyEditText">

                        <EditText
                            android:id="@+id/sign_up_email_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/sign_up_email_hint" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lock_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/sign_up_password_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:theme="@style/MyEditText">

                        <EditText
                            android:id="@+id/sign_up_password_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/sign_up_password_hint" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_call_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/sign_up_phone_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:theme="@style/MyEditText">

                        <EditText
                            android:id="@+id/sign_up_phone_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:imeOptions="actionDone"
                            android:singleLine="true"
                            android:maxLength="10"
                            android:hint="@string/sign_up_phone_hint" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>


                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="2dp"
                    android:layout_marginTop="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/signup_sumbit_txt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:text="@string/sign_up_now_txt"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <TextView
                android:text="@string/sign_up_account_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:id="@+id/signup_login_txt" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>