<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusableInTouchMode="true"></LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:id="@+id/login_finish_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/actionbar_back"
                        android:layout_marginLeft="10dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Login"
                        android:paddingRight="10dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16dp"/>
                </LinearLayout>


                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:focusableInTouchMode="true"></LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_email_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:theme="@style/MyEditText">

                        <EditText
                            android:id="@+id/login_email_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/sign_up_email_hint" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_lock_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_password_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:theme="@style/MyEditText">

                        <EditText
                            android:id="@+id/login_password_edt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/sign_up_password_hint" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@color/colorPrimary"
                    card_view:cardCornerRadius="15dp"
                    card_view:cardElevation="2dp"
                    android:layout_marginTop="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/login_sumbit_txt"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:textSize="14dp"
                            android:gravity="center"
                            android:text="@string/login_txt"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <TextView
                android:text="Forgot Password ?"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:id="@+id/login_forgot_txt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:text="Dont't have an Account ? Sign up"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:id="@+id/login_signup_txt" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>